test/passing/tests/disable_local_let.ml
let f () =
  let [@ocamlformat "disable"] x = y
  in
  ()
