test/failing/attribute_and_expression.ml
let _ = f (2 [@test 2])
